<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_transparente2"
    tools:context=".CreateUser">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444">

        <EditText
            android:id="@+id/Tx_Nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/Nick"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:background="@drawable/border2"
            android:backgroundTint="@color/primaryDarkColor"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Tx_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:background="@drawable/border2"
            android:backgroundTint="@color/primaryDarkColor"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Tx_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:background="@drawable/border2"
            android:backgroundTint="@color/primaryDarkColor"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Tx_PassW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/PassWord"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:background="@drawable/border2"
            android:backgroundTint="@color/primaryDarkColor"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Tx_CPassW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/VPassWord"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:background="@drawable/border2"
            android:backgroundTint="@color/primaryDarkColor"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:background="@drawable/boton_2_min"
        android:onClick="SingUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SingUp"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button" />


</androidx.constraintlayout.widget.ConstraintLayout>